fix too wide text in offer section when using device with small width

--- a/styles/sass/modules/_offer.scss
+++ b/styles/sass/modules/_offer.scss
@@ -3,11 +3,15 @@
     padding-top: 6rem;
     padding-left: 20rem;
 
+    @media screen and (max-width: 321px) {
+      padding-left: 0;
+    }
+
     @media screen and (max-width: 992px) {
       padding-left: 2.5%;
     }
 
-    @media screen and (max-width: 1200px){
+    @media screen and (max-width: 1200px) {
       padding-left: 10%;
     }
 
@@ -37,6 +41,10 @@
         font-size: 2.5rem;
       }
 
+      @media screen and (max-width: 321px) {
+        font-size: 2rem;
+      }
+
       @media screen and (min-width: 2400px) {
         font-size: 5rem;
       }
@@ -56,6 +64,10 @@
       font-size: 1.1rem;
       padding-top: 0.5rem;
       padding-bottom: 0rem;
+
+      @media screen and (max-width: 321px) {
+        padding-left: 0;
+      }
 
       @media screen and (max-width: 992px) {
         padding-left: 1rem;
@@ -78,7 +90,11 @@
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
 
-      @media screen and (max-width: 992px) {
+      @media screen and (max-width: 321px) {
+        padding-left: 0;
+      }
+
+      @media screen and (max-width: 992px) and (min-width: 321px) {
         padding-left: 1rem;
       }
 
